--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -19,7 +19,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+
+    "composite": true,
+    "emitDeclarationOnly": true,
+    "outDir": "./dist"
   },
   "include": ["vite.config.ts"]
 }
