--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "prebuild": "rm -rf node_modules package-lock.json && npm install",
+
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
