--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,3 +1,5 @@
 {
-  "buildCommand": "rm -rf node_modules package-lock.json && npm ci && npm run build"
+  "buildCommand": "npm install --force && cd client && npm install --force && npm run build",
+  "outputDirectory": "client/dist",
+  "installCommand": "npm install --force && cd client && npm install --force"
 }
