--- a/client/package.json
+++ b/client/package.json
@@ -38,5 +38,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
-  }
+  },
+  "engines": {
+  "node": "20.x"
+}
+
 }
