--- a/client/package.json
+++ b/client/package.json
@@ -40,5 +40,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
     "vite": "^5.2.10"
-  }
+  },
+  "optionalDependencies":  {  
+    "@rollup/rollup-linux-arm64-gnu": "^4.0.0"  
+}
 }
